Update Gradle and add JFrog Artifactory